2010-05-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* CustomTypes.sql: RevisionWorkView: fetch endtime too.

2010-04-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.Generated.cs: Regenerated.

2010-01-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.Generated.cs: Regenerated.

2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MonkeyWrench.DataClasses.csproj: Updated with new file.

2009-11-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.cs: UploadFileAsync: GZCompress can return a null value,
	(can't compress) in which case upload uncompressed.

2009-10-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MonkeyWrench.DataClasses.csproj: Added new file.

2009-09-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.Generated.cs: Regenerated.

2009-09-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.Generated.cs: Regenerated.

2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.Generated.cs: Regenerated.

	* MonkeyWrench.DataClasses.csproj: Updated.

2009-09-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.Generated.cs: Regenerated.

2009-07-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.cs: Add a convenience ExecuteSchedulerAsync
	method.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Utilities.cs: Added, moved some methods from the
	MonkeyWrench.Web.UI assembly here.

	* Makefile:
	* MonkeyWrench.DataClasses.csproj: Ref System.Web.dll too.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.Generated.cs: Regenerated.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.cs: Add the possibility to get a redirect
	url which doesn't propagate credentials.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.Generated.cs: Regenerated.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.cs: Add a check to not upload files > 100MB.

2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>
