@@ -2,6 +2,10 @@
 
 	* WebServices.wsdl: Regenerated.
 
+2010-05-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* WebServices.wsdl: Regenerated.
+
 2010-04-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* WebServices.wsdl: Regenerated.
