@@ -1,5 +1,9 @@
 2010-05-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* WebServices.Generated.cs: Regenerated.
+
+2010-05-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* CustomTypes.sql: RevisionWorkView: fetch endtime too.
 
 2010-04-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>
